--- a/index.html
+++ b/index.html
@@ -389,6 +389,7 @@
 					}
 				} else {
 					processMovementConditions(movements);
+					console.log(movements);
 				}
 
 				function processMovementConditions(movements) {
