--- a/index.html
+++ b/index.html
@@ -393,7 +393,7 @@
 				}
 
 				function processMovementConditions(movements) {
-					// Iterate over movement conditions
+					// Iterate over movement conditions.
 					cachedMovementConditions.forEach(condition => {
 						let match = true;
 						for (let key in condition.condition) {
