--- a/index.html
+++ b/index.html
@@ -380,16 +380,20 @@
 				// Detect movement
 				let movements = handleMovement();
 
+				if (movements === previousMovements) {
 				// Fetch movement conditions JSON file if not already cached...
-				if (!cachedMovementConditions) {
-					try {
-						cachedMovementConditions = await $.get('hachi_moves.json');
+					if (!cachedMovementConditions) {
+						try {
+							cachedMovementConditions = await $.get('hachi_moves.json');
+							previousMovements == movements;
+							processMovementConditions(movements);
+						} catch (error) {
+							console.error('Error fetching movement conditions JSON:', error);
+						}
+					} else {
+						previousMovements == movements;
 						processMovementConditions(movements);
-					} catch (error) {
-						console.error('Error fetching movement conditions JSON:', error);
 					}
-				} else {
-					processMovementConditions(movements);
 				}
 
 				function processMovementConditions(movements) {
