--- a/index.html
+++ b/index.html
@@ -394,6 +394,8 @@
 						previousMovements == movements;
 						processMovementConditions(movements);
 					}
+				} else {
+					return;
 				}
 
 				function processMovementConditions(movements) {
