--- a/index.html
+++ b/index.html
@@ -379,6 +379,7 @@
 
 			async function checkMovement() {
 				// Detect movement
+				console.log("0");
 				let movements = handleMovement();
 
 				// Fetch movement conditions JSON file if not already cached...
@@ -390,22 +391,26 @@
 							console.error('Error fetching movement conditions JSON:', error);
 						}
 					} else {
+						console.log("1");
 						processMovementConditions(movements);
 					}
 
 				function processMovementConditions(movements) {
 					let partMoving;
 					let directionMoving;
+					console.log("2");
 					// Iterate over movement conditions.
 					cachedMovementConditions.forEach(condition => {
 						let match = true;
 						for (let key in condition.condition) {
 							if (condition.condition[key] !== movements[key]) {
 								match = false;
+								console.log("3");
 								break;
 							}
 						}
 						if (match) {
+							console.log("4");
 							partMoving = condition.partMoving;
 							directionMoving = condition.directionMoving;
 						}
@@ -415,7 +420,7 @@
 						// Update previousPartMoving and previousDirectionMoving
 						previousPart = partMoving;
 						previousDirection = directionMoving;
-
+						console.log("5");
 						console.log(partMoving);
 						console.log(directionMoving);
 
