--- a/index.html
+++ b/index.html
@@ -409,9 +409,9 @@
 							}
 						}
 						if (match) {
+							console.log("Match");
 							partMoving = condition.partMoving;
 							directionMoving = condition.directionMoving;
-
 						}
 					});
 
