--- a/index.html
+++ b/index.html
@@ -404,6 +404,8 @@
 						if (match) {
 							partMoving = condition.partMoving;
 							directionMoving = condition.directionMoving;
+							console.log(partMoving);
+							console.log(directionMoving);
 						}
 					});
 
