--- a/index.html
+++ b/index.html
@@ -374,6 +374,8 @@
 			}
 
 			let cachedMovementConditions = null;
+			let previousPart = "none";
+			let previousDirection = "none";
 
 			async function checkMovement() {
 				// Detect movement
@@ -408,9 +410,14 @@
 					});
 
 					// Update previous potentiometer values for the next iteration.
-					previousPotValues = potValues.slice(0, numPotentiometers);
-					// Add movement to the sequence buffer
-					trackMovementSequences();
+					//previousPotValues = potValues.slice(0, numPotentiometers);
+					// Check if partMoving or directionMoving are different from their previous values and add movement to the sequence buffer
+					if (partMoving !== previousPart || directionMoving !== previousDirection) {
+						// Update previous potentiometer values for the next iteration.
+						previousPotValues = potValues.slice(0, numPotentiometers);
+						// Add movement to the sequence buffer
+						trackMovementSequences();
+					}
 				}
 			}
 
