--- a/index.html
+++ b/index.html
@@ -343,7 +343,7 @@
 				let movements = {};
 
 				// Mapping between labels and movements
-				const labelMovements = {};
+				var labelMovements = {};
 
 				if (deviceName === "hachi_BT") {
 					labelMovements = {
