--- a/index.html
+++ b/index.html
@@ -350,6 +350,10 @@
 					"HEAD": "headMoving",
 					"FRONT LEG": "leftLegMoving",
 					"BACK LEG": "rightLegMoving",
+					"LEFT SHOULDER": "leftShoulderMoving",
+					"RIGHT SHOULDER": "rightShoulderMoving",
+					"LEFT FOREARM": "leftForearmMoving",
+					"RIGHT FOREARM": "rightForearmMoving",
 					"TAIL": "waistMoving"
 					};
 				} else {
