--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 						deviceName = device.name;
 
 						if (deviceName === "hachi_BT") {
-							labels = ["EMPTY", "EMPTY", "EMPTY", "EMPTY", "HEAD", "FRONT LEG", "BACK LEG", "TAIL"];
+							labels = ["EMPTY", "EMPTY", "EMPTY", "EMPTY", "HEAD", "LEFT LEG", "RIGHT LEG", "TAIL"];
 						} else {
 							labels = ["LEFT FOREARM", "LEFT SHOULDER", "HEAD", "RIGHT SHOULDER", "RIGHT FOREARM", "WAIST", "LEFT LEG", "RIGHT LEG"];
 						}
@@ -343,21 +343,7 @@
 				let movements = {};
 
 				// Mapping between labels and movements
-				var labelMovements = {};
-
-				if (deviceName === "hachi_BT") {
-					labelMovements = {
-					"HEAD": "headMoving",
-					"FRONT LEG": "leftLegMoving",
-					"BACK LEG": "rightLegMoving",
-					"LEFT SHOULDER": "leftShoulderMoving",
-					"RIGHT SHOULDER": "rightShoulderMoving",
-					"LEFT FOREARM": "leftForearmMoving",
-					"RIGHT FOREARM": "rightForearmMoving",
-					"TAIL": "waistMoving"
-					};
-				} else {
-					labelMovements = {
+				const labelMovements = {
 					"HEAD": "headMoving",
 					"LEFT LEG": "leftLegMoving",
 					"RIGHT LEG": "rightLegMoving",
@@ -366,8 +352,7 @@
 					"LEFT FOREARM": "leftForearmMoving",
 					"RIGHT FOREARM": "rightForearmMoving",
 					"WAIST": "waistMoving"
-					};
-				}
+				};
 
 				// Check movement for each potentiometer
 				for (let i = 0; i < numPotentiometers; i++) {
@@ -386,7 +371,6 @@
 
 				// Return the detected movement
 				return movements;
-				console.log(movements);
 			}
 
 			let cachedMovementConditions = null;
@@ -431,8 +415,8 @@
 						// Update previous potentiometer values for the next iteration.
 						previousPotValues = potValues.slice(0, numPotentiometers);
 						// Add movement to the sequence buffer
-						//console.log(partMoving);
-						//console.log(directionMoving);
+						console.log(partMoving);
+						console.log(directionMoving);
 						trackMovementSequences();
 					}
 				}
