--- a/index.html
+++ b/index.html
@@ -40,9 +40,9 @@
 			var streetName = "Unknown";
 			var deviceName ="";
 			let labels = ["EMPTY","EMPTY","EMPTY","EMPTY","EMPTY","EMPTY","EMPTY","EMPTY",];
-			const moveSource = null;
-			const movePatterns = null;
-			const sentenceSource = null;
+			let moveSource = null;
+			let movePatterns = null;
+			let sentenceSource = null;
 
 
 			async function connectToDevice() {
