--- a/index.html
+++ b/index.html
@@ -373,9 +373,9 @@
 
 					// Movement detection
 					if (potValues[i] < previousPotValues[i] - movementThreshold) {
-						movements[movement] = true; // Moving up
+						movements[movement] = true; // Movement increases
 					} else if (potValues[i] > previousPotValues[i] + movementThreshold) {
-						movements[movement] = false; // Moving down
+						movements[movement] = false; // Movement decreases
 					}
 				}
 
@@ -419,15 +419,18 @@
 						}
 					});
 
-					// Update previous potentiometer values for the next iteration.
 					// Check if partMoving or directionMoving are different from their previous values and add movement to the sequence buffer
 					if (partMoving !== previousPart || directionMoving !== previousDirection) {
-						// Update previous potentiometer values for the next iteration.
-						previousPotValues = potValues.slice(0, numPotentiometers);
 						// Add movement to the sequence buffer
 						console.log(partMoving);
 						console.log(directionMoving);
+						previousPart = partMoving;
+						previousDirection = directionMoving;
+						// Update previous potentiometer values for the next iteration.
+						previousPotValues = potValues.slice(0, numPotentiometers);
 						trackMovementSequences();
+					} else {
+						break;
 					}
 				}
 			}
