--- a/index.html
+++ b/index.html
@@ -430,7 +430,7 @@
 						previousPotValues = potValues.slice(0, numPotentiometers);
 						trackMovementSequences();
 					} else {
-						break;
+						return;
 					}
 				}
 			}
